k8s-external-secrets/kuard.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
        - name: kuard
          image: ongoonku/kuard-amd64:1
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 200Mi
              cpu: "0.2"
            requests:
              memory: 100Mi
              cpu: "0.1"
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: kuard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
spec:
  ingressClassName: traefik
  rules:
    - host: kuard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard
                port:
                  number: 8080
